<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:XPOTunes="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".screen.main.game.GameActivity">

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/default_song_name" />

        <TextView
            android:id="@+id/txtTimePassed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_time"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMiddle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <at.markushi.ui.CircleButton
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:visibility="invisible"
            XPOTunes:cb_color="#3F51B5"
            XPOTunes:cb_pressedRingWidth="8dip" />

        <ImageButton
            android:id="@+id/btnToggleGame"
            android:layout_width="250dip"
            android:layout_height="250dip"
            android:background="#000F"/>

        <at.markushi.ui.CircleButton
            android:id="@+id/btnSkipMusic"
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:layout_marginBottom="32dp"
            android:text="Skip"
            android:visibility="invisible"
            XPOTunes:cb_color="#3F51B5"
            XPOTunes:cb_pressedRingWidth="8dip" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnSelectMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#000F"
            android:textColor="@color/primary"
            android:text="@string/select_musics" />

    </LinearLayout>


</LinearLayout>